--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="images/nice logo.png" width="180px">
+                    <img src="images/nice logo.png" width="100px" height="100px">
                 </div>
                 <nav>
                     <ul id="MenuItems">
