--- a/login.html
+++ b/login.html
@@ -9,6 +9,8 @@
         family=poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
         <link rel="Stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+
     </head>   
     <body>
         <div class="container">
@@ -148,6 +150,7 @@
     }
 
 </script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
